SERVER-66306 Initialize counter to 0